--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "args": [
         "-sav=./test/sav/pokeemerald_2.sav",
         "-gba=./test/gba/pokeemerald.gba",
-        "-o=species,sprites"
+        "-o=species"
       ],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal"
